# morocco-weather-tracker

./: .gitignore  README.md  pyproject.toml
src/: extract.py
